[gd_scene load_steps=10 format=2]

[ext_resource path="res://environment/objects/chest/Chest.tscn" type="PackedScene" id=1]
[ext_resource path="res://environment/light/SimpleLight.tscn" type="PackedScene" id=2]
[ext_resource path="res://islands/IslandBase.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.239216, 0.690196, 0.054902, 1 )

[sub_resource type="CylinderShape" id=3]
radius = 51.4842
height = 8.11017

[sub_resource type="CapsuleShape" id=4]
radius = 1.85406
height = 0.331757

[sub_resource type="CapsuleShape" id=5]
radius = 1.85406
height = 0.331757

[sub_resource type="BoxShape" id=6]

[node name="IslandBase" type="StaticBody" groups=[
"island",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0778383, 0 )
collision_layer = 262145
collision_mask = 262145
script = ExtResource( 3 )

[node name="LandPivot" type="Spatial" parent="."]

[node name="Land" type="MeshInstance" parent="LandPivot"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="ChestPosition" type="Position3D" parent="LandPivot/Land"]

[node name="Chest" parent="LandPivot/Land/ChestPosition" instance=ExtResource( 1 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.992776, 0 )

[node name="AreaMusic" type="Area" parent="LandPivot/Land/ChestPosition"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.992776, 0 )

[node name="CollisionShape" type="CollisionShape" parent="LandPivot/Land/ChestPosition/AreaMusic"]
shape = SubResource( 3 )

[node name="PropHolder" type="Spatial" parent="LandPivot"]

[node name="Position3D" type="Position3D" parent="LandPivot/PropHolder"]
transform = Transform( -1.90948, 0, 0.594883, 0, 2, 0, -0.594883, 0, -1.90948, 0, 0.992776, 0 )

[node name="Position3D2" type="Position3D" parent="LandPivot/PropHolder"]
transform = Transform( -1.90948, 0, 0.594883, 0, 2, 0, -0.594883, 0, -1.90948, 0, 0.992776, 0 )

[node name="Position3D3" type="Position3D" parent="LandPivot/PropHolder"]
transform = Transform( -1.90948, 0, 0.594883, 0, 2, 0, -0.594883, 0, -1.90948, 0, 0.992776, 0 )

[node name="Position3D4" type="Position3D" parent="LandPivot/PropHolder"]
transform = Transform( -1.90948, 0, 0.594883, 0, 2, 0, -0.594883, 0, -1.90948, 0, 0.992776, 0 )

[node name="CollisionPlayer" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="CollisionAI" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00626516, 0.00848675, -0.00735068 )
shape = SubResource( 5 )

[node name="AreaDocking" type="Area" parent="."]
transform = Transform( 0.326942, 0, 0, 0, 1, 0, 0, 0, 0.326942, -1.37835, -0.135368, 1.31242 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDocking"]
transform = Transform( 2.03683, 0, 0, 0, 1, 0, 0, 0, 2.03683, 4.0257, 0.359295, 0.543062 )
shape = SubResource( 6 )

[node name="SimpleLight" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49912, 0 )
light_energy = 0.5
omni_range = 4.0
[connection signal="body_entered" from="LandPivot/Land/ChestPosition/AreaMusic" to="." method="_on_AreaMusic_body_entered"]
[connection signal="body_exited" from="LandPivot/Land/ChestPosition/AreaMusic" to="." method="_on_AreaMusic_body_exited"]
